--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,11 +1,11 @@
 <Project>
 	<PropertyGroup>
-		<Version>2.2.1</Version>
-		<RepositoryUrl>https://github.com/mkjeff/secs4net</RepositoryUrl>
-		<Authors>mkjeff</Authors>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Version>1.0.0</Version>
+		<!--<RepositoryUrl>https://github.com/mkjeff/secs4net</RepositoryUrl>-->
+		<Authors>berthu</Authors>
+		<!--<PackageLicenseExpression>MIT</PackageLicenseExpression>-->
 		<Nullable>enable</Nullable>
-		<LangVersion>10.0</LangVersion>
+		<!--<LangVersion>10.0</LangVersion>-->
 		<Deterministic>true</Deterministic>
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -17,12 +17,21 @@
 		<Copyright>Copyright © secs4net 2023</Copyright>
 		<PackageProjectUrl>https://mkjeff.github.io/secs4net/</PackageProjectUrl>
 	</PropertyGroup>
+  <PropertyGroup>
+    <!-- 设置 SolutionDir 属性为解决方案文件的绝对路径 -->
+    <SolutionDir>$(MSBuildThisFileDirectory)</SolutionDir>
+  </PropertyGroup>
 
-	<ItemGroup>
+  <ItemGroup>
 		<PackageReference Include="PolySharp" Version="1.13.2" Condition="'$(TargetFramework)' != 'net6.0'">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+    <!-- Nuget的Icon文件 --><!--
+    <None Include="$(SolutionDir)vx_images\DimTechStudio-Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>-->
 	</ItemGroup>
 
 </Project>
