--- a/samples/SecsDevice/SecsDevice.csproj
+++ b/samples/SecsDevice/SecsDevice.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>net6.0-windows;net472</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <IsPackable>false</IsPackable>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
