--- a/samples/WpfVisualizer/WpfVisualizer.csproj
+++ b/samples/WpfVisualizer/WpfVisualizer.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <IsPackable>false</IsPackable>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
