--- a/src/Secs4Net.Json/Secs4Net.Json.csproj
+++ b/src/Secs4Net.Json/Secs4Net.Json.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
     <Product>Secs4Net.Json</Product>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
