--- a/test/Secs4Net.UnitTests/Secs4Net.UnitTests.csproj
+++ b/test/Secs4Net.UnitTests/Secs4Net.UnitTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0;net472</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
