--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Pack
       #run: dotnet pack -c Release 
       run: |
-         cd .\src\Secs4Net
+         cd ".\src\Secs4Net"
          dotnet pack Secs4Net.csproj  --configuration Release --no-build
     - name: Push
       #run: dotnet nuget push "**/*.nupkg" --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
