--- a/src/Secs4Net/Secs4Net.csproj
+++ b/src/Secs4Net/Secs4Net.csproj
@@ -8,6 +8,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <LangVersion>10.0</LangVersion>
+    <Version>1.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
