--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -37,4 +37,4 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
         PROJECT_FILE_PATH: src/Secs4Net/Secs4Net.csproj
-        NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
+        NUGET_KEY: oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny
