--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -33,8 +33,8 @@ jobs:
          dotnet pack Secs4Net.csproj  --configuration Release --no-build
     - name: Push
       #run: dotnet nuget push "**/*.nupkg" --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
-      #run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
-      uses: brandedoutcast/publish-nuget@v2.5.2
-      with:
-        PROJECT_FILE_PATH: src/Secs4Net/Secs4Net.csproj
-        NUGET_KEY: oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny
+      run: dotnet nuget push **/*.nupkg --api-key oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny --source https://api.nuget.org/v3/index.json --skip-duplicate
+      # uses: brandedoutcast/publish-nuget@v2.5.2
+      # with:
+      #   PROJECT_FILE_PATH: src/Secs4Net/Secs4Net.csproj
+      #   NUGET_KEY: oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny
