--- a/samples/DeviceWorkerService/DeviceWorkerService.csproj
+++ b/samples/DeviceWorkerService/DeviceWorkerService.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net\MySecs4Net.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.csproj" />
   </ItemGroup>
 </Project>
