--- a/src/Secs4Net.Json/Secs4Net.Json.csproj
+++ b/src/Secs4Net.Json/Secs4Net.Json.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Secs4Net\Secs4Net.csproj" />
+    <ProjectReference Include="..\Secs4Net\MySecs4Net.csproj" />
   </ItemGroup>
 
 </Project>
