--- a/samples/SecsDevice/SecsDevice.csproj
+++ b/samples/SecsDevice/SecsDevice.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net\MySecs4Net.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.csproj" />
   </ItemGroup>
   
