--- a/samples/WpfVisualizer/WpfVisualizer.csproj
+++ b/samples/WpfVisualizer/WpfVisualizer.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net\MySecs4Net.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.csproj" />
   </ItemGroup>
 
