--- a/test/Secs4Net.UnitTests/Secs4Net.UnitTests.csproj
+++ b/test/Secs4Net.UnitTests/Secs4Net.UnitTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net\MySecs4Net.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
   </ItemGroup>
   
   <ItemGroup>
