--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -27,7 +27,7 @@ jobs:
     # - name: Test
     #   run: dotnet test --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack src/Secs4Net/Secs4Net.csproj -c Release --no-build
+      run: dotnet pack src/Secs4Net/Secs4Net.Bert.csproj -c Release --no-build
       # run: |
       #    cd "/home/runner/work/secs4net/secs4net/src/Secs4Net"
       #    dotnet pack Secs4Net.csproj  --configuration Release --no-build
