--- a/samples/DeviceWorkerService/DeviceWorkerService.csproj
+++ b/samples/DeviceWorkerService/DeviceWorkerService.csproj
@@ -13,6 +13,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
-    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.Bert.csproj" />
   </ItemGroup>
 </Project>
