--- a/test/Secs4Net.Sml.UnitTests/Secs4Net.Sml.UnitTests.csproj
+++ b/test/Secs4Net.Sml.UnitTests/Secs4Net.Sml.UnitTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.Bert.csproj" />
   </ItemGroup>
 
   <ItemGroup>
