--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -26,16 +26,15 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     # - name: Test
     #   run: dotnet test --no-build --verbosity normal
-    - name: Pack
+    - name: Pack Secs4Net.Bert
       run: dotnet pack src/Secs4Net/Secs4Net.Bert.csproj -c Release --no-build
-      # run: |
-      #    cd "/home/runner/work/secs4net/secs4net/src/Secs4Net"
-      #    dotnet pack Secs4Net.csproj  --configuration Release --no-build
-    - name: Push
-      run: dotnet nuget push "**/*.nupkg" --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
-      #run: dotnet nuget push **/*.nupkg --api-key oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny --source https://api.nuget.org/v3/index.json --skip-duplicate
-      #run: dotnet nuget push src/Secs4Net/bin/Release/*.nupkg -k oy2d3s6o65yyihl6ea4aghaeygfpp26exnw6wrquxi4jny -s https://api.nuget.org/v3/index.json
-      # uses: brandedoutcast/publish-nuget@v2.5.5
-      # with:
-      #   PROJECT_FILE_PATH: src/Secs4Net/Secs4Net.csproj
-      #   NUGET_KEY: oy2kozcjc63rc5ge2vpanxmno5wvjc6udcplzbmf47e6f4
+      working-directory: ./src/Secs4Net
+    - name: Push Secs4Net.Bert
+      run: dotnet nuget push src/Secs4Net/bin/Release/*.nupkg --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+      working-directory: ./src/Secs4Net
+    - name: Pack Secs4Net.Sml.Bert
+      run: dotnet pack src/Secs4Net.Sml/Secs4Net.Sml.Bert.csproj -c Release --no-build
+      working-directory: ./src/Secs4Net.Sml
+    - name: Push Secs4Net.Sml.Bert
+      run: dotnet nuget push src/Secs4Net.Sml/bin/Release/*.nupkg --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+      working-directory: ./src/Secs4Net.Sml
