--- a/test/Benchmarks/Benchmarks.csproj
+++ b/test/Benchmarks/Benchmarks.csproj
@@ -23,7 +23,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.csproj" />
-    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.Bert.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
   </ItemGroup>
 
