--- a/samples/WpfVisualizer/WpfVisualizer.csproj
+++ b/samples/WpfVisualizer/WpfVisualizer.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
-    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.Bert.csproj" />
   </ItemGroup>
 
   <ItemGroup>
