--- a/test/Benchmarks/Benchmarks.csproj
+++ b/test/Benchmarks/Benchmarks.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.Bert.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.Bert.csproj" />
     <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
   </ItemGroup>
