--- a/src/Secs4Net.Sml/Secs.Sml.Bert.csproj
+++ b/src/Secs4Net.Sml/Secs.Sml.Bert.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
-    <Product>Secs4Net.Json</Product>
     <LangVersion>10.0</LangVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,15 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="6.0.5" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Secs4Net\Secs4Net.Bert.csproj" />
+    <ProjectReference Include="..\Secs4Net\Secs.Bert.csproj" />
   </ItemGroup>
 
 </Project>
