--- a/test/Benchmarks/Benchmarks.csproj
+++ b/test/Benchmarks/Benchmarks.csproj
@@ -22,9 +22,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs4Net.Json.Bert.csproj" />
-    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs4Net.Sml.Bert.csproj" />
-    <ProjectReference Include="..\..\src\Secs4Net\Secs4Net.Bert.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Json\Secs.Json.Bert.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net.Sml\Secs.Sml.Bert.csproj" />
+    <ProjectReference Include="..\..\src\Secs4Net\Secs.Bert.csproj" />
   </ItemGroup>
 
   <ItemGroup>
